updated port folio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Aarti Mehta | Backend developer from Surat, India
+    Aarti Mehta | MEAN Stack developer from Surat, India
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -57,7 +57,7 @@
           <span>Aarti Mehta</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Backend Developer in Surat, India.</p>
+        <p>A MEAN Stack Developer in Surat, India.</p>
         <p>If you believe in yourself, anything is possible</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
@@ -80,7 +80,7 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              My name is Aarti and I am from Surat, India. I come from a Hindu family. I have 3+ years of experience as backend developer.
+              My name is Aarti and I am from Surat, India. I come from a Hindu family. I have 4+ years of experience as MEAN Stack developer.
               My strength is hard work and self-motivated.<br>
               I like playing or watching Cricket and listening music.  <br>
               I know English, Gujarati and Hindi languages very well.
@@ -124,12 +124,15 @@
 
           <div class="work__box col-auto">
             <ul class="work__list">
+              <li>Angular</li>
               <li>Node JS</li>
-              <li>Java script</li>
+              <li>Java Script</li>
+              <li>Type Script</li>
+              <li>jQuery</li>
               <li>AWS</li>
               <li>MongoDB</li>
               <li>MySQL</li>
-              <li>Angular</li>
+              <li>Git</li>
             </ul>
           </div>
         </div>
@@ -147,6 +150,9 @@
 
           <div class="work__box">
               <ul class="work__list">
+                <li>Angular - Worked on live projects. Expertise in fundamentals. Experience developing
+                  highly interactive web applications utilizing JavaScript, HTML, CSS, JSON, Angular and
+                Bootstrap and integrating Restful API's. </li><br>
                 <li>NodeJS - Worked on more than 4+ backend projects. Experience with different node
                   frameworks like express, sails js- MVC framework, actionhero, nest js etc. Also familiar with SQL,
                   mongoDB, firebase Cloud Functions, Sequelize, Docker, Swagger, Heroku, socket.io., RabbitMQ.
@@ -155,9 +161,6 @@
                   functions, S3 bucket, Code Pipelines, CloudWatch for logs, SQS, SNS, Secret Manager etc..</li><br>
                 <li>Embedded Javascript templates(EJS): Good experience with ejs templates, HTML, CSS,
                   JavaScript, jQuery, AJAX, JSON.</li><br>
-                <li>Angular - Worked on one live project. Expertise in fundamentals. Experience developing
-                  highly interactive web applications utilizing JavaScript, HTML, CSS, JSON, Angular JS 10, and
-                Bootstrap and integrating Restful API's. </li><br>
                 <li>  ASP.NET - Worked on two team projects. Expertise in fundamentals. Experience with
                   Mircoservices, consul, Repository Pattern, Swagger etc.</li>
               </ul>
