--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="about__content">
           <div class="about__photo-container">
             <!-- Provide a link to your resume -->
-            <a target="_blank" href="/images/Aarti's%20Resume.pdf" class="btn">My Resume</a>
+            <a target="_blank" href="./images/AartiMehtaResume.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__text">
